--- a/app/globals.css
+++ b/app/globals.css
@@ -2,15 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
+/* --- Base --- */
 html,
 body,
 :root {
   height: 100%;
 }
 
+/* --- Map --- */
 .leaflet-bottom,
 .leaflet-control,
 .leaflet-pane,
 .leaflet-top {
   z-index: 0 !important;
+}
+
+/* --- Calendar --- */
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalendarWrapper {
+  font-size: 16px !important;
+  width: 100% !important;
 }
